--- a/envoy/config.yaml
+++ b/envoy/config.yaml
@@ -15,6 +15,6 @@ apis:
 
 clusters:
   - name: web
-    addr: "web:9091"
+    addr: "10.5.0.10:9091"
   - name: health-demo
-    addr: "health-demo:8081"
+    addr: "10.5.0.11:8081"
