fix: auth-adapter authorization and improve documentation
- Fix formCheckResponse to return PERMISSION_DENIED status (was always OK)
- Add explicit 401 for empty token with required policy
- Fix path extraction: use Http.Path instead of :path header
- Add x-forwarded-for fallback for client IP detection
- Add demo token validation in extAuth stub
- Add ProtectedService with required/optional auth policies
- Add web-http container for HTTP testing
- Add use_remote_address and allowed_headers to ext_authz config
- Document gRPC service naming conventions (package.Service vs Service)
- Document method routing behavior for unconfigured methods
- Document gRPC-Web testing limitations with path prefix
- Add authorization testing examples to README

--- a/envoy/config.yaml
+++ b/envoy/config.yaml
@@ -1,20 +1,58 @@
-api_route: /
+api_route: /api/
+
+clusters:
+  # gRPC сервис (fake-service в gRPC режиме)
+  - name: web
+    addr: "web:9091"
+    type: "grpc"
+
+  # HTTP сервис (fake-service в HTTP режиме)
+  - name: web-http
+    addr: "web-http:9092"
+    type: "http"
+
+  # Health check сервис
+  - name: health-demo
+    addr: "health-demo:8081"
+    type: "grpc"
 
 apis:
+  # gRPC-Web тестирование
   - name: FakeService
-    auth: {policy: no-need}
     cluster: web
+    auth: {policy: no-need}
     methods:
       - name: Handle
         auth:
           policy: no-need
-          rate_limit: {period: "1m", count: 3, delay: "3s"}
+          rate_limit: {period: "1m", count: 10, delay: "3s"}
+
+  # HTTP REST тестирование (public)
+  - name: HttpService
+    cluster: web-http
+    auth: {policy: no-need}
+    methods:
+      - name: health
+        auth: {policy: no-need}
+      - name: echo
+        auth: {policy: no-need}
+
+  # Protected HTTP endpoint (requires auth)
+  - name: ProtectedService
+    cluster: web-http
+    auth: {policy: required}
+    methods:
+      - name: profile
+        auth:
+          policy: required
+      - name: data
+        auth:
+          policy: optional
+
+  # gRPC Health Check
   - name: grpc.health.v1.Health
     cluster: health-demo
     auth: {policy: no-need}
-
-clusters:
-  - name: web
-    addr: "web:9091"
-  - name: health-demo
-    addr: "health-demo:8081"
+    methods:
+      - name: Check
+        auth: {policy: no-need}
