--- a/envoy/docker-compose.yaml
+++ b/envoy/docker-compose.yaml
@@ -39,12 +39,23 @@ services:
     image: nicholasjackson/fake-service:v0.19.1
     environment:
       LISTEN_ADDR: 0.0.0.0:9091
-      #UPSTREAM_URIS: "grpc://localhost:9092"
-      MESSAGE: "Hello World"
-      NAME: "web"
+      MESSAGE: "Hello from gRPC"
+      NAME: "web-grpc"
       SERVER_TYPE: "grpc"
     ports:
       - "9091:9091"
+    networks:
+      private:
+
+  web-http:
+    image: nicholasjackson/fake-service:v0.19.1
+    environment:
+      LISTEN_ADDR: 0.0.0.0:9092
+      MESSAGE: "Hello from HTTP"
+      NAME: "web-http"
+      SERVER_TYPE: "http"
+    ports:
+      - "9092:9092"
     networks:
       private:
   health-demo:
