feat: add grpcwebcli tool, zero-config routing docs, health check testing
- Add tools/grpcwebcli: gRPC-Web CLI with path prefix support
- Document zero-config method routing principle
- Replace health-demo service with Envoy cluster health checks
- Add verification checklist (13 tests)

--- a/envoy/config.yaml
+++ b/envoy/config.yaml
@@ -10,11 +10,17 @@ clusters:
   - name: web-http
     addr: "web-http:9092"
     type: "http"
+    health_check:
+      path: "/health"
+      interval_seconds: 10
 
-  # Health check сервис
-  - name: health-demo
-    addr: "health-demo:8081"
-    type: "grpc"
+  # Unhealthy cluster for testing (port not listening)
+  - name: unhealthy-demo
+    addr: "web-http:9999"
+    type: "http"
+    health_check:
+      path: "/health"
+      interval_seconds: 5
 
 apis:
   # gRPC-Web тестирование
@@ -49,10 +55,7 @@ apis:
         auth:
           policy: optional
 
-  # gRPC Health Check
-  - name: grpc.health.v1.Health
-    cluster: health-demo
+  # Unhealthy service for testing health checks
+  - name: UnhealthyService
+    cluster: unhealthy-demo
     auth: {policy: no-need}
-    methods:
-      - name: Check
-        auth: {policy: no-need}
