feat: restore health-demo for streaming tests, add zero-config examples
- Restore health-demo service for gRPC streaming tests
- Add grpc.health.v1.Health API with Check method (Watch via zero-config)
- Update verification checklist to 15 tests
- Add both HTTP and gRPC zero-config routing examples

--- a/envoy/config.yaml
+++ b/envoy/config.yaml
@@ -22,6 +22,11 @@ clusters:
       path: "/health"
       interval_seconds: 5
 
+  # gRPC Health service (for streaming tests)
+  - name: health-demo
+    addr: "health-demo:8081"
+    type: "grpc"
+
 apis:
   # gRPC-Web тестирование
   - name: FakeService
@@ -59,3 +64,11 @@ apis:
   - name: UnhealthyService
     cluster: unhealthy-demo
     auth: {policy: no-need}
+
+  # gRPC Health service (streaming test via Watch method)
+  - name: grpc.health.v1.Health
+    cluster: health-demo
+    auth: {policy: no-need}
+    methods:
+      - name: Check
+        auth: {policy: no-need}
